app/styles/ember-frost-bunsen/frost-object-browser-facets.scss
.frost-object-browser-facets {
  .frost-bunsen-form {
    .frost-bunsen-collapsed {
      > .frost-bunsen-body {
        display: none;
      }
    }

    .frost-bunsen-section {
      padding-top: 0;
      border-top: 0;
    }

    .frost-field {
      width: 158px; // FIXME: somehow .frost-text started overflowing the facets, should be fixed better

      > div {
        display: block;
      }
    }

    .frost-bunsen-heading {
      display: flex;
      align-items: center;
      margin-top: 5px;
      margin-bottom: 5px;
      padding-right: 0;
      text-align: left;

      .frost-bunsen-toggle-handle + h3 {
        margin-left: 10px;
      }

      h3 {
        color: $frost-color-night-1;
        font-size: 14px;
        font-weight: bold;
      }

      h3 + button {
        margin-left: auto;
      }
    }

    .frost-bunsen-left-input {
      width: 100%;
    }

    .frost-bunsen-left-label {
      display: none;
    }

    .frost-bunsen-input-checkbox-array {
      .frost-checkbox {
        padding-top: 10px;
      }
    }
  }

  .frost-password,
  .frost-text,
  .frost-select {
    min-width: 100px;
  }
}

